--- a/front/src/lang/bigdatagrapes-en.json
+++ b/front/src/lang/bigdatagrapes-en.json
@@ -1,6 +1,6 @@
 {
-    "sixtine": {
-        "welcome-message": "Welcome to Sixtine",
+    "bigdatagrapes": {
+        "welcome-message": "Welcome to Bigdatagrapes",
         "title": "Information System for INRAE experimental units",
         "login": {
             "info": "Please enter your identifiers to login"
