--- a/front/src/lang/bigdatagrapes-fr.json
+++ b/front/src/lang/bigdatagrapes-fr.json
@@ -1,6 +1,6 @@
 {
-    "sixtine": {
-        "welcome-message": "Bienvenue dans Sixtine",
+    "bigdatagrapes": {
+        "welcome-message": "Bienvenue dans Bigdatagrapes",
         "title": "Système d'Information pour les Unités Expérimentales d'INRAE",
         "login": {
             "info": "Merci de saisir vos identifiants pour vous connecter à l'application"
