--- a/front/src/lang/bigdatagrapes-fr.json
+++ b/front/src/lang/bigdatagrapes-fr.json
@@ -1,7 +1,7 @@
 {
     "bigdatagrapes": {
-        "welcome-message": "Bienvenue dans Bigdatagrapes",
-        "title": "Système d'Information pour les Unités Expérimentales d'INRAE",
+        "welcome-message": "Bienvenue dans OpenSILEX BigDatagrapes",
+        "title": "OpenSILEX pour le projet BigDatagrapes",
         "login": {
             "info": "Merci de saisir vos identifiants pour vous connecter à l'application"
         }
