--- a/front/src/lang/vitioeno-en.json
+++ b/front/src/lang/vitioeno-en.json
@@ -15,6 +15,11 @@
         },
         "home": {
             "wineNews": "Few tweets about wine and vine"
+        },
+        "menu": {
+            "shared": {
+                "label": "Shared ressources"
+            }
         }
     }
 }
