Update labels and config

--- a/front/src/lang/vitioeno-en.json
+++ b/front/src/lang/vitioeno-en.json
@@ -19,6 +19,12 @@
         "menu": {
             "shared": {
                 "label": "Shared ressources"
+            },
+            "applications": {
+                "label": "Applications"
+            },
+            "news": {
+                "label": "News"
             }
         }
     }
