--- a/front/src/lang/vitioeno-fr.json
+++ b/front/src/lang/vitioeno-fr.json
@@ -1,7 +1,7 @@
 {
     "vitioeno": {
         "welcome-message": "Bienvenue dans OpenSILEX Vitioeno",
-        "title": "L'instance ressource pour la vigne et le vin",
+        "title": "Une instance de ressources partagées pour la vigne et le vin",
         "login": {
             "info": "Merci de saisir vos identifiants pour vous connecter à l'application",
             "infoGuest": "Vous pouvez vous connecter en tant qu'invité"
