--- a/front/src/lang/vitioeno-fr.json
+++ b/front/src/lang/vitioeno-fr.json
@@ -6,7 +6,7 @@
             "info": "Merci de saisir vos identifiants pour vous connecter à l'application",
             "infoGuest": "Vous pouvez vous connecter en tant qu'invité"
         },
-        "license" : "Attribution - Pas d’Utilisation Commerciale - Pas de Modification CC BY-NC-ND"
+        "license": "Attribution - Pas d’Utilisation Commerciale - Pas de Modification CC BY-NC-ND"
     },
     "component": {
         "login": {
@@ -27,6 +27,22 @@
         },
         "news": {
             "label": "News"
+        },
+        "references": {
+            "label": "Réferences",
+            "ontologies": {
+                "label": "Ontologies"
+            },
+            "documents": {
+                "label": "Documents"
+            },
+            "links": {
+                "label": "Links"
+            }
+        },
+        "twitter": {
+            "national": "National",
+            "international": "International"
         }
     }
 }
