--- a/front/src/lang/vitioeno-en.json
+++ b/front/src/lang/vitioeno-en.json
@@ -38,6 +38,9 @@
                 "links": {
                     "label": "Links"
                 }
+            },
+            "users-groups": {
+                "label": "Users-Groups"
             }
         },
         "twitter": {
