--- a/front/src/lang/vitioeno-fr.json
+++ b/front/src/lang/vitioeno-fr.json
@@ -4,16 +4,28 @@
         "title": "Un système d'information de ressources partagées pour la vigne et le vin",
         "login": {
             "info": "Merci de saisir vos identifiants pour vous connecter à l'application",
-            "infoGuest": "Vous pouvez vous connecter en tant qu'invité"
+            "infoGuest": "Vous pouvez vous connecter en tant qu'invité",
+            "orInfo": "ou saisir vos identifiants"
         },
-        "license": "Attribution - Pas d’Utilisation Commerciale - Pas de Modification CC BY-NC-ND"
-    },
-    "component": {
-        "login": {
-            "button": {
-                "loginAsGuest": "Connexion en tant qu'invité"
+        "license": "Attribution - Pas d’Utilisation Commerciale - Pas de Modification CC BY-NC-ND",
+        "germplasm-license": "Attribution - Pas d’Utilisation Commerciale - Pas de Modification CC BY-NC-ND",
+        "component": {
+            "login": {
+                "button": {
+                    "loginAsGuest": "Connexion en tant qu'invité"
+                },
+                "copyright": {
+                    "1": "",
+                    "2": "Vitioeno - Système d'Information ressources en vitivinicole",
+                    "3": "Version 1 du 01-01-2022"
+                }
+            },
+            "footer": {
+                "copyright": "Copyright © 2020 - 2022 INRAE Tous Droits Réservés. Vitioeno {version} version du {date}"
             }
-        },
+        }
+    },
+    "component": { 
         "home": {
             "wineNews": "Quelques tweets sur l'actualité de la vine et du vin"
         },
