--- a/front/src/lang/vitioeno-fr.json
+++ b/front/src/lang/vitioeno-fr.json
@@ -16,9 +16,9 @@
                     "loginAsGuest": "Connexion en tant qu'invité"
                 },
                 "copyright": {
-                    "1": "",
-                    "2": "Vitioeno - Système d'Information de ressources numériques vitivinicole",
-                    "3": "Version 2 du 01-09-2023"
+                    "1": "Vitioeno - Système d'Information de ressources numériques vitivinicole",
+                    "2": "Version 2 du 02-09-2023",
+                    "3": "Ce site web utilise des cookies pour améliorer votre expérience. En continuant à utiliser ce site, vous acceptez notre utilisation des cookies."
                 }
             },
             "footer": {
@@ -52,12 +52,16 @@
                     "label": "Documents"
                 },
                 "links": {
-                    "label": "Links"
+                    "label": "Sites web et portails"
                 }
             },
             "users-groups": {
                 "label": "Users-Groups"
-            }
+            },
+            "about": {
+                "label" : "A propos",
+                "description": "Informations à propose du centre de ressources numériques" 
+            } 
         },
         "twitter": {
             "national": "National",
