Update ontology Add document terms Update menu

--- a/front/src/lang/vitioeno-en.json
+++ b/front/src/lang/vitioeno-en.json
@@ -37,7 +37,7 @@
             "document": "Useful protocol datasets for wine and vine experiment management",
             "documentText": "Documents",
             "community": "Links with other interesting initiatives for data management",
-            "communityText": "Documents"
+            "communityText": "Community links"
         },
         "menu": { 
             "applications": {
