--- a/front/src/lang/vitioeno-fr.json
+++ b/front/src/lang/vitioeno-fr.json
@@ -38,7 +38,7 @@
             "document": "Protocoles et ensembles de données utiles pour la gestion des expériences sur le vin et la vigne",
             "documentText": "Documents",
             "community": "Liens avec d'autres initiatives intéressantes pour la gestion des données",
-            "communityText": "Communauté" 
+            "communityText": "liens communautaires" 
 
         },
         "menu": { 
